<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.slytechs.jnet.runtime</groupId>
	<artifactId>jnetpcap-examples</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>jNetPcap Examples</name>
	<description>Code examples of jNetPcap (OS) and jNetPcap Pro usage</description>
	<url>https://www.jnetpcap.org</url>
	<properties>
		<jdk.version>19</jdk.version>
		<project.build.sourceEncoding>${java.encoding}</project.build.sourceEncoding>
		<maven.compiler.source>${jdk.version}</maven.compiler.source>
		<maven.compiler.target>${jdk.version}</maven.compiler.target>
		<java.preview>--enable-preview</java.preview>
		<java.encoding>UTF-8</java.encoding>
		<java.native>--enable-native-access=ALL-UNNAMED</java.native>
	</properties>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>
	<organization>
		<name>Sly Technologies Inc</name>
		<url>http://slytechs.com</url>
	</organization>
	<developers>
		<developer>
			<id>markb</id>
			<name>Mark Bednarczyk</name>
			<email>mark@slytechs.com</email>
			<organization>Sly Technlogies</organization>
			<organizationUrl>http://slytechs.com</organizationUrl>
		</developer>
	</developers>
	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>3.10.1</version>
		</dependency>
		<dependency>
			<groupId>com.slytechs.jnet.runtime</groupId>
			<artifactId>jnetpcap</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.slytechs.jnet.runtime</groupId>
			<artifactId>jnetpcap-pro</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.slytechs.jnet.runtime</groupId>
			<artifactId>base-protocol</artifactId>
			<version>1.0.0</version>
		</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<release>${jdk.version}</release>
					<enablePreview>true</enablePreview>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.7.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<doctitle>Public API for ${project.name} ${project.version}</doctitle>
					<windowtitle>Public API for ${project.name} ${project.version}</windowtitle>
					<encoding>${java.encoding}</encoding>
					<source>${jdk.version}</source>
					<additionalOptions>
								${java.preview}
					</additionalOptions>
					<show>public</show>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-scm-publish-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<scmBranch>gh-pages</scmBranch>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<doctitle>Public API for ${project.name} ${project.version}</doctitle>
					<windowtitle>Public API for ${project.name} ${project.version}</windowtitle>
					<testDoctitle>Test API for ${project.name} ${project.version}</testDoctitle>
					<testWindowtitle>Test API for ${project.name} ${project.version}</testWindowtitle>
					<encoding>${java.encoding}</encoding>
					<source>${jdk.version}</source>
					<additionalOptions>
								${java.preview}
					</additionalOptions>
				</configuration>
				<reportSets>
					<reportSet>
						<id>aggregate-no-fork</id>
						<configuration>
							<goal>aggregate-no-fork</goal>
							<show>public</show>
							<skip>false</skip>
						</configuration>
						<reports>
							<report>javadoc</report>
						</reports>
					</reportSet>
					<reportSet>
						<id>test-aggregate-no-fork</id>
						<configuration>
							<goal>test-aggregate-no-fork</goal>
							<show>private</show>
							<skip>true</skip>
						</configuration>
						<reports>
							<report>test-javadoc</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>
	<profiles>
		<profile>
			<id>osx-homebrew</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
				<file>
					<exists>/usr/local/Cellar/libpcap/${libpcap.version}</exists>
				</file>
			</activation>
			<build></build>
			<properties>
				<java.library.path.libpcap.osx>-Djava.library.path=/usr/local/Cellar/libpcap/${libpcap.version}/lib</java.library.path.libpcap.osx>
				<java.library.path.libpcap>${java.library.path.libpcap.osx}</java.library.path.libpcap>
				<excludeGroups>windows-api|linux-api</excludeGroups>
			</properties>
		</profile>
		<profile>
			<id>osx-macports</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
				<file>
					<exists>/opt/local/lib/libpcap.dylib</exists>
					<missing>/usr/local/Cellar/libpcap/${libpcap.version}/lib</missing>
				</file>
			</activation>
			<properties>
				<java.library.path.libpcap.osx>-Djava.library.path=/opt/local/lib</java.library.path.libpcap.osx>
				<java.library.path.libpcap>${java.library.path.libpcap.osx}</java.library.path.libpcap>
				<excludeGroups>windows-api|linux-api</excludeGroups>
			</properties>
		</profile>
		<profile>
			<id>linux-x86</id>
			<activation>
				<os>
					<name>Linux</name>
					<arch>x86</arch>
				</os>
			</activation>
			<properties>
				<java.library.path.libpcap.linux>-Djava.library.path=/usr/lib/x86-linux-gnu</java.library.path.libpcap.linux>
				<java.library.path.libpcap>${java.library.path.libpcap.linux}</java.library.path.libpcap>
				<excludeGroups>windows-api</excludeGroups>
			</properties>
		</profile>
		<profile>
			<id>linux-amd64</id>
			<activation>
				<os>
					<name>Linux</name>
					<arch>amd64</arch>
				</os>
			</activation>
			<properties>
				<java.library.path.libpcap.linux64>-Djava.library.path=/usr/lib/x86_64-linux-gnu</java.library.path.libpcap.linux64>
				<java.library.path.libpcap>${java.library.path.libpcap.linux64}</java.library.path.libpcap>
				<excludeGroups>windows-api</excludeGroups>
			</properties>
		</profile>
		<profile>
			<id>linux-x86_64</id>
			<activation>
				<os>
					<name>Linux</name>
					<arch>x86_64</arch>
				</os>
			</activation>
			<properties>
				<java.library.path.libpcap.linux64>-Djava.library.path=/usr/lib/x86_64-linux-gnu</java.library.path.libpcap.linux64>
				<java.library.path.libpcap>${java.library.path.libpcap.linux64}</java.library.path.libpcap>
				<excludeGroups>windows-api</excludeGroups>
			</properties>
		</profile>
		<profile>
			<id>windows-x86_64</id>
			<activation>
				<os>
					<family>Windows</family>
					<arch>x86_64</arch>
				</os>
			</activation>
			<properties>
				<java.library.path.libpcap.windows64>-Djava.library.path="C:\\Windows\\SysWOW64"</java.library.path.libpcap.windows64>
				<java.library.path.libpcap>${java.library.path.libpcap.windows64}</java.library.path.libpcap>
				<excludeGroups>unix-api|linux-api</excludeGroups>
			</properties>
		</profile>
		<profile>
			<id>windows-x86</id>
			<activation>
				<os>
					<family>Windows</family>
					<arch>x86</arch>
				</os>
			</activation>
			<properties>
				<java.library.path.libpcap.windows>-Djava.library.path="C:\\Windows\\Program Files"</java.library.path.libpcap.windows>
				<java.library.path.libpcap>${java.library.path.libpcap.windows}</java.library.path.libpcap>
				<excludeGroups>unix-api|linux-api</excludeGroups>
			</properties>
		</profile>
	</profiles>
	<issueManagement>
		<system>Github Issue Tracking</system>
		<url>https://github.com/slytechs-repos/jnetpcap-examples/issues</url>
	</issueManagement>
	<scm>
		<connection>scm:git:git://github.com/slytechs-repos/jnetpcap.git</connection>
		<developerConnection>scm:git:ssh:git://github.com/slytechs-repos/jnetpcap-examples.git</developerConnection>
		<url>https://github.com/slytechs-repos/jnetpcap</url>
	</scm>
	<distributionManagement>
		<!-- mvn clean site site:stage scm-publish:publish-scm -->
		<site>
			<id>github</id>
			<url>scm:git:git@github.com:slytechs-repos/jnetpcap-examples.git</url>
		</site>
	</distributionManagement>
</project>